add navlinks in the header
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Become a Driver or Get a Ride Now - Lyft</title>
-    <link rel="shortcut icon" href="./images/favicon.ico" />
-  </head>
-  <body>
-    sadf
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Become a Driver or Get a Ride Now - Lyft</title>
+  <link rel="shortcut icon" href="./images/favicon.ico" />
+  <link rel="preload" href="style.css" as="style" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <a href="https://www.lyft.com">
+      <svg fill='#ff00bf' preserveAspectRatio='xMidYMid meet' viewBox=' 0 0 72 50' height='40px'>
+        <g>
+          <path
+            d="M.023.888h10.912v28.716c0 4.544 2.12 7.251 3.796 8.411-1.775 1.547-7.198 2.901-11.24-.386C1.106 35.69.022 32.504.022 29.507V.888z" />
+          <path
+            d="M68.218 24.742v-3.018h3.328V11.137H67.89C66.488 4.781 60.717.018 53.815.018c-7.95 0-14.396 6.32-14.396 14.116v24.724c2.265.312 4.964-.04 7.26-1.906 2.384-1.938 3.467-5.124 3.467-8.122v-.91h5.45V17.333h-5.45v-3.199h.013c0-1.98 1.637-3.585 3.656-3.585 2.02 0 3.662 1.605 3.662 3.585v10.608c0 7.796 6.453 14.116 14.403 14.116V28.326c-2.019 0-3.662-1.605-3.662-3.584" />
+          <path
+            d="M26.89 11.137v15.537c0 .883-.746 1.597-1.667 1.597-.92 0-1.667-.714-1.667-1.597V11.137H12.759V29.41c0 3.288 1.137 7.445 6.31 8.799 5.18 1.355 8.185-1.45 8.185-1.45-.274 1.848-2.049 3.201-4.909 3.491-2.164.22-4.93-.483-6.31-1.063v9.681c3.517 1.017 7.236 1.345 10.877.653 6.606-1.257 10.775-6.671 10.775-13.874v-24.51H26.891z" />
+        </g>
+      </svg></a>
+    <div>
+      <svg width='16' height='16' style='fill:#DE00A6' viewbox='0 0 16 16'>
+        <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
+      </svg>
+      <input type='text' name="wheretogo" placeholder="Where are you going?">
+      <svg width='16' height='16' fill='rgba(12, 11, 49, 1)' viewbox='0 0 16 16'>
+        <path
+          d="M7.298 10.313a3.172 3.172 0 0 1-2.776-3.514 3.145 3.145 0 0 1 1.182-2.116 3.14 3.14 0 0 1 2.332-.66 3.17 3.17 0 0 1 2.777 3.515A3.15 3.15 0 0 1 9.63 9.653a3.151 3.151 0 0 1-2.332.66zm5.98 2.433-1.733-2.192A5.122 5.122 0 0 0 12.8 7.771V7.77a5.173 5.173 0 0 0-4.53-5.733 5.111 5.111 0 0 0-3.806 1.077 5.131 5.131 0 0 0-1.929 3.452 5.174 5.174 0 0 0 5.137 5.768 5.1 5.1 0 0 0 2.287-.56l1.747 2.212 1.571-1.24z">
+        </path>
+      </svg>
+    </div>
+    <ul class='navlinks'>
+      <a href="https://www.lyft.com/driver">DRIVER</a>
+      <a href="https://www.lyft.com/rider">RIDER</a>
+      <a href="https://www.lyft.com/business">BUSINESS</a>
+      <a href="https://www.lyft.com/login">LOG IN</a>
+      <a href="https://www.lyft.com/signup">SIGN UP</a>
+    </ul>
+  </header>
+</body>
+
 </html>
