--- a/index.html
+++ b/index.html
@@ -6,43 +6,116 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Become a Driver or Get a Ride Now - Lyft</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.7/tailwind.min.css"
+    integrity="sha512-y6ZMKFUQrn+UUEVoqYe8ApScqbjuhjqzTuwUMEGMDuhS2niI8KA3vhH2LenreqJXQS+iIXVTRL2iaNfJbDNA1Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="shortcut icon" href="./images/favicon.ico" />
   <link rel="preload" href="style.css" as="style" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <header>
-    <a href="https://www.lyft.com">
-      <svg fill='#ff00bf' preserveAspectRatio='xMidYMid meet' viewBox=' 0 0 72 50' height='40px'>
-        <g>
+  <header class="flex flex-row justify-center">
+    <div class='navbar page-wide-section'>
+      <a href="https://www.lyft.com" class="lyft-logo">
+        <svg fill='#ff00bf' preserveAspectRatio='xMidYMid meet' viewBox=' 0 0 72 50' height='40px'>
+          <g>
+            <path
+              d="M.023.888h10.912v28.716c0 4.544 2.12 7.251 3.796 8.411-1.775 1.547-7.198 2.901-11.24-.386C1.106 35.69.022 32.504.022 29.507V.888z" />
+            <path
+              d="M68.218 24.742v-3.018h3.328V11.137H67.89C66.488 4.781 60.717.018 53.815.018c-7.95 0-14.396 6.32-14.396 14.116v24.724c2.265.312 4.964-.04 7.26-1.906 2.384-1.938 3.467-5.124 3.467-8.122v-.91h5.45V17.333h-5.45v-3.199h.013c0-1.98 1.637-3.585 3.656-3.585 2.02 0 3.662 1.605 3.662 3.585v10.608c0 7.796 6.453 14.116 14.403 14.116V28.326c-2.019 0-3.662-1.605-3.662-3.584" />
+            <path
+              d="M26.89 11.137v15.537c0 .883-.746 1.597-1.667 1.597-.92 0-1.667-.714-1.667-1.597V11.137H12.759V29.41c0 3.288 1.137 7.445 6.31 8.799 5.18 1.355 8.185-1.45 8.185-1.45-.274 1.848-2.049 3.201-4.909 3.491-2.164.22-4.93-.483-6.31-1.063v9.681c3.517 1.017 7.236 1.345 10.877.653 6.606-1.257 10.775-6.671 10.775-13.874v-24.51H26.891z" />
+          </g>
+        </svg>
+      </a>
+      <div class="searchbox">
+        <svg width='16' height='16' class='search-dot' style='fill:#DE00A6' viewbox='0 0 16 16'>
+          <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
+        </svg>
+        <input type='text' name="wheretogo" placeholder="Where are you going?">
+        <svg width='16' height='16' class='searchicon' fill='rgba(12, 11, 49, 1)' viewbox='0 0 16 16'>
           <path
-            d="M.023.888h10.912v28.716c0 4.544 2.12 7.251 3.796 8.411-1.775 1.547-7.198 2.901-11.24-.386C1.106 35.69.022 32.504.022 29.507V.888z" />
-          <path
-            d="M68.218 24.742v-3.018h3.328V11.137H67.89C66.488 4.781 60.717.018 53.815.018c-7.95 0-14.396 6.32-14.396 14.116v24.724c2.265.312 4.964-.04 7.26-1.906 2.384-1.938 3.467-5.124 3.467-8.122v-.91h5.45V17.333h-5.45v-3.199h.013c0-1.98 1.637-3.585 3.656-3.585 2.02 0 3.662 1.605 3.662 3.585v10.608c0 7.796 6.453 14.116 14.403 14.116V28.326c-2.019 0-3.662-1.605-3.662-3.584" />
-          <path
-            d="M26.89 11.137v15.537c0 .883-.746 1.597-1.667 1.597-.92 0-1.667-.714-1.667-1.597V11.137H12.759V29.41c0 3.288 1.137 7.445 6.31 8.799 5.18 1.355 8.185-1.45 8.185-1.45-.274 1.848-2.049 3.201-4.909 3.491-2.164.22-4.93-.483-6.31-1.063v9.681c3.517 1.017 7.236 1.345 10.877.653 6.606-1.257 10.775-6.671 10.775-13.874v-24.51H26.891z" />
-        </g>
-      </svg></a>
-    <div>
-      <svg width='16' height='16' style='fill:#DE00A6' viewbox='0 0 16 16'>
-        <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
-      </svg>
-      <input type='text' name="wheretogo" placeholder="Where are you going?">
-      <svg width='16' height='16' fill='rgba(12, 11, 49, 1)' viewbox='0 0 16 16'>
-        <path
-          d="M7.298 10.313a3.172 3.172 0 0 1-2.776-3.514 3.145 3.145 0 0 1 1.182-2.116 3.14 3.14 0 0 1 2.332-.66 3.17 3.17 0 0 1 2.777 3.515A3.15 3.15 0 0 1 9.63 9.653a3.151 3.151 0 0 1-2.332.66zm5.98 2.433-1.733-2.192A5.122 5.122 0 0 0 12.8 7.771V7.77a5.173 5.173 0 0 0-4.53-5.733 5.111 5.111 0 0 0-3.806 1.077 5.131 5.131 0 0 0-1.929 3.452 5.174 5.174 0 0 0 5.137 5.768 5.1 5.1 0 0 0 2.287-.56l1.747 2.212 1.571-1.24z">
-        </path>
-      </svg>
+            d="M7.298 10.313a3.172 3.172 0 0 1-2.776-3.514 3.145 3.145 0 0 1 1.182-2.116 3.14 3.14 0 0 1 2.332-.66 3.17 3.17 0 0 1 2.777 3.515A3.15 3.15 0 0 1 9.63 9.653a3.151 3.151 0 0 1-2.332.66zm5.98 2.433-1.733-2.192A5.122 5.122 0 0 0 12.8 7.771V7.77a5.173 5.173 0 0 0-4.53-5.733 5.111 5.111 0 0 0-3.806 1.077 5.131 5.131 0 0 0-1.929 3.452 5.174 5.174 0 0 0 5.137 5.768 5.1 5.1 0 0 0 2.287-.56l1.747 2.212 1.571-1.24z">
+          </path>
+        </svg>
+      </div>
+      <ul class='navlinks-header'>
+        <li><a href="https://www.lyft.com/driver">DRIVER</a></li>
+        <li><a href="https://www.lyft.com/rider">RIDER</a></li>
+        <li><a href="https://www.lyft.com/business">BUSINESS</a></li>
+        <li><a href="https://www.lyft.com/login">LOG IN</a></li>
+        <li><a href="https://www.lyft.com/signup">SIGN UP</a></li>
+      </ul>
     </div>
-    <ul class='navlinks'>
-      <a href="https://www.lyft.com/driver">DRIVER</a>
-      <a href="https://www.lyft.com/rider">RIDER</a>
-      <a href="https://www.lyft.com/business">BUSINESS</a>
-      <a href="https://www.lyft.com/login">LOG IN</a>
-      <a href="https://www.lyft.com/signup">SIGN UP</a>
-    </ul>
   </header>
+
+  <footer class='footer'>
+    <div class='sitemap page-section'>
+      <ul class='list-style'>
+        <li style='font-weight: 700'>Driver</li>
+        <li>Become a Driver</li>
+        <li>Earnings</li>
+        <li>Cities</li>
+        <li>Help</li>
+        <li>Safety</li>
+        <li>Application Requirements</li>
+        <li>Express Drive</li>
+        <li>Bouns</li>
+        <li>Lyft Rewards</li>
+        <li>Driving Opportunities</li>
+        <li>Insurance</li>
+        <li>Hub</li>
+      </ul>
+      <ul class='list-style'>
+        <li style='font-weight: 700'>Rider</li>
+        <li>Sign up to ride</li>
+        <li>Fare Estimate</li>
+        <li>Lyft Pink</li>
+        <li>Cities</li>
+        <li>Help</li>
+        <li>Safety</li>
+        <li>Business profile</li>
+        <li>Rewards</li>
+        <li>Events</li>
+        <li>Airports</li>
+        <li>Gift Cards</li>
+        <li>Donate</li>
+        <li>Blog</li>
+      </ul>
+      <ul class='list-style'>
+        <li style='font-weight: 700'>Lyft</li>
+        <li>Careers</li>
+        <li>LyftUp</li>
+        <li>Business</li>
+        <li>Rentals</li>
+        <li>Bikes</li>
+        <li>Scooters</li>
+        <li>Self-Driving</li>
+        <li>Lyft Media</li>
+        <li>Developers</li>
+        <li>Press</li>
+        <li>Investor Relations</li>
+      </ul>
+      <ul class='list-style navlinks-footer'>
+        <li><a href="https://www.lyft.com/drive-with-lyft">Lyft driver app</a></li>
+        <li><a href="https://ride.lyft.com/?entrypoint=lyftcom">Lyft rider app</a></li>
+        <li><a href="https://ride.lyft.com/?entrypoint=lyftcom">Ride on web</a></li>
+      </ul>
+    </div>
+    <div class='footnote page-section'>
+      <ul class='list-style'>
+        <li><a href="https://www.lyft.com/terms">Terms</a></li>
+        <li><a href="https://www.lyft.com/privacy">Privacy</a></li>
+        <li>&copy; 2021 Lyft, Inc.</li>
+        <li>CPUC ID No. TCP0032513-P</li>
+        <li class='navlinks-footer'><a href="https://www.twitter.com/lyft" class='fa fa-twitter'></a></li>
+        <li class='navlinks-footer'><a href="https://www.facebook.com/lyft" class='fa fa-facebook'></a></li>
+        <li class='navlinks-footer'><a href="https://www.instagram.com/lyft" class='fa fa-instagram'></a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
