add hero section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,22 @@
         <li><a href="https://www.lyft.com/signup">SIGN UP</a></li>
       </ul>
     </div>
+    <div style='height: 40px;'></div>
   </header>
+
+  <section class='hero-section'>
+    <div style='width: 50%'>
+      <h3 class='ready-when-you-are'>Ready when you are</h3>
+      <div style='height: 16px'></div>
+      <h1 class='hop-in'>Hop in. Crack a window. Let's get back out there.</h1>
+      <a href='https://www.lyft.com/drive-with-lyft' class='apply-to-drive'>Apply to drive</a>
+      <a href='https://account.lyft.com/auth?next=https%3A%2F%2Fride.lyft.com%3Fentrypoint%3DriderWebOnboarding&v=RiderWebOnboardingV1&_gl=1*1adn3hp*_gcl_aw*R0NMLjE2MDQ1OTg4NTkuQ2p3S0NBaUE0bzc5QlJCdkVpd0FqdGVvWUFjck1vNFhtZ3hZaEJkR3ZRMmN6dlktbm1lZVRjRFVGUktmNEdRYjlyZUU.'
+        class='sign-up-to-ride'>
+        Sign up to ride</a>
+    </div>
+    <div style='padding-right: 16px; width: 8.33333%'></div>
+
+  </section>
 
   <footer class='footer'>
     <div class='sitemap page-section'>
