--- a/index.html
+++ b/index.html
@@ -52,19 +52,101 @@
     <div style='height: 40px;'></div>
   </header>
 
-  <section class='hero-section'>
-    <div style='width: 50%'>
-      <h3 class='ready-when-you-are'>Ready when you are</h3>
-      <div style='height: 16px'></div>
-      <h1 class='hop-in'>Hop in. Crack a window. Let's get back out there.</h1>
-      <a href='https://www.lyft.com/drive-with-lyft' class='apply-to-drive'>Apply to drive</a>
-      <a href='https://account.lyft.com/auth?next=https%3A%2F%2Fride.lyft.com%3Fentrypoint%3DriderWebOnboarding&v=RiderWebOnboardingV1&_gl=1*1adn3hp*_gcl_aw*R0NMLjE2MDQ1OTg4NTkuQ2p3S0NBaUE0bzc5QlJCdkVpd0FqdGVvWUFjck1vNFhtZ3hZaEJkR3ZRMmN6dlktbm1lZVRjRFVGUktmNEdRYjlyZUU.'
-        class='sign-up-to-ride'>
-        Sign up to ride</a>
-    </div>
-    <div style='padding-right: 16px; width: 8.33333%'></div>
+  <main>
+    <section class='hero-section'>
+      <div style='width: 50%; padding-bottom: 115px;'>
+        <h3 class='ready-when-you-are'>Ready when you are</h3>
+        <div style='height: 16px'></div>
+        <h1 class='hop-in'>Hop in. Crack a window. Let's get back out there.</h1>
+        <a href='https://www.lyft.com/drive-with-lyft' class='apply-to-drive'>Apply to drive</a>
+        <a href='https://account.lyft.com/auth?next=https%3A%2F%2Fride.lyft.com%3Fentrypoint%3DriderWebOnboarding&v=RiderWebOnboardingV1&_gl=1*1adn3hp*_gcl_aw*R0NMLjE2MDQ1OTg4NTkuQ2p3S0NBaUE0bzc5QlJCdkVpd0FqdGVvWUFjck1vNFhtZ3hZaEJkR3ZRMmN6dlktbm1lZVRjRFVGUktmNEdRYjlyZUU.'
+          class='sign-up-to-ride'>
+          Sign up to ride</a>
+      </div>
+      <div style='width: 8.3333%; padding-right: 16px'></div>
+      <div style='width: 41.6667%'>
+        <div style='position: relative; height: 100%; width: 100%'>
+          <img src='./images/home_hero_1_tile.jpg' class='hero-img-1'>
+          <img src='./images/Driver_wearing_a_mask_in_the_car.jpg' class='driver-wearing-mask'>
+        </div>
+      </div>
+    </section>
 
-  </section>
+    <section class='driver-section'>
+      <div class='driver-section-container'>
+        <div style='width: 8.3333%; order: 1; padding-right: 16px'></div>
+        <div style='width: 33.3333%; order: 2'>
+          <img src='./images/driver_section_2x.jpg' class='driver-2'>
+        </div>
+        <div style='width: 8.3333%; order: 3; padding-right: 16px'></div>
+        <div style='width: 41.6667%; order: 4; padding-right: 16px'>
+          <div class='driver-section-info'>
+            <h3 class='drive-with-lyft'>Drive With Lyft</h3>
+            <h1 class='set-your-own-hours'>Set your own hours. Earn on your own terms.</h1>
+            <p class='reason-to-drive'>Maybe you’re saving up for school. Or keeping flexible hours to spend more time
+              with your family. It’s a
+              great time to get in the driver’s seat, connect with your community, and earn a little extra cash. Plus,
+              you can tell people you’ve got the best boss in town: you.</p>
+            <div style='display: flex; flex-direction: row'>
+              <span style='display: inline-block; margin-right: 8px'>
+                <svg style='width: 24px; height: 24px'>
+                  <path
+                    d="M3 19v-2h18v2H3zm0-4V5h18v10H3zm16-3.96V8.99c-.52-.03-1.02-.25-1.36-.6a2.09 2.09 0 0 1-.6-1.39h-2.41c.84.72 1.37 1.81 1.37 3s-.53 2.28-1.36 3h2.42c.01-.53.22-1.04.57-1.39.34-.34.84-.56 1.37-.57zM9.36 13v-.03A3.92 3.92 0 0 1 8 10c0-1.19.53-2.28 1.37-3H6.91A1.939 1.939 0 0 1 5 8.89v2.26c.99.02 1.8.86 1.81 1.85h2.55z">
+                  </path>
+                </svg>
+              </span>
+              <div>
+                <strong>Reliable earnings</strong>
+                <p style='margin-top: 6px; margin-bottom: 24px;'>Make money, keep your tips, and use in-app tools to
+                  help maximize your
+                  earnings.</p>
+              </div>
+            </div>
+            <div style='display: flex; flex-direction: row;'>
+              <span style='display: inline-block; margin-right: 8px'>
+                <svg style='width: 24px; height: 24px'>
+                  <path
+                    d="M19.862 10.519a7.946 7.946 0 0 0-.665-2.017l1.8-.874c.387.8.668 1.649.832 2.523l-1.967.368zm-1.216-2.975a8.01 8.01 0 0 0-2.006-2.062l1.162-1.628a10.013 10.013 0 0 1 2.503 2.574l-1.66 1.116zm-3.04-2.688A7.922 7.922 0 0 0 12 4l-.26.003-.062-1.999L12 2c1.585 0 3.103.36 4.508 1.072l-.902 1.784zM12 22C6.486 22 2 17.514 2 12c0-4.808 3.425-8.941 8.144-9.828l.369 1.966A7.999 7.999 0 0 0 4 12c0 4.411 3.589 8 8 8s8-3.589 8-8h2c0 5.514-4.486 10-10 10zm4-8h-5V8h2v4h3v2z">
+                  </path>
+                </svg>
+              </span>
+              <div>
+                <strong>A flexible schedule</strong>
+                <p style='margin-top: 6px; margin-bottom: 24px;'>Be your own boss and drive whenever it works for you.
+                </p>
+              </div>
+            </div>
+            <div style='display: flex; flex-direction: row'>
+              <span style='display: inline-block; margin-right: 8px'>
+                <svg style='width: 24px; height: 24px'>
+                  <path
+                    d="M8.11 20.99c-.283-.105.059-.579.169-.746.407-.614.492-.72 1.28-2.21.72-1.365.488-3.328-.274-4.745-1.299-2.416-1.26-2.863.755-4.829.852-.832 4.959-4.824 5.363-5.219.201-.197.388-.274.501-.229 0 0 .259.035-.073.63-.307.548-.51.778-1.254 2.131-.743 1.352-.467 3.33.306 4.742 1.315 2.408 1.27 2.847-.722 4.834a511.714 511.714 0 0 1-4.765 4.645c-.186.178-1.088 1.108-1.287.997">
+                  </path>
+                </svg>
+              </span>
+              <div>
+                <strong>Get paid promptly</strong>
+                <p style='margin-top: 6px'>Cash out your earnings whenever you want with Express Pay and Lyft Direct.
+                </p>
+              </div>
+            </div>
+            <div style='display: flex; flex-direction: row; margin-top: 40px'>
+              <a href='https://www.lyft.com/drive-with-lyft' class='apply-to-drive'>Apply to drive</a>
+              <div style='display: inline-flex; align-items: center;'>
+                <a href='https://www.lyft.com/driver/pay?pid=earnings'>
+                  <strong style='font-size: 14px; line-height: 18px; margin-right: 8px; margin-left: 24px'>How driver
+                    pay works</strong>
+                </a>
+                <svg style='width: 16px; height: 16px'>
+                  <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer class='footer'>
     <div class='sitemap page-section'>
@@ -113,7 +195,7 @@
         <li>Press</li>
         <li>Investor Relations</li>
       </ul>
-      <ul class='list-style navlinks-footer'>
+      <ul class='list-style navlinks-footer-links'>
         <li><a href="https://www.lyft.com/drive-with-lyft">Lyft driver app</a></li>
         <li><a href="https://ride.lyft.com/?entrypoint=lyftcom">Lyft rider app</a></li>
         <li><a href="https://ride.lyft.com/?entrypoint=lyftcom">Ride on web</a></li>
