add drive with lyft and drivers' reviews
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -146,6 +146,54 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class='driver-review-container'>
+        <div class='driver-review-individual'>
+          <img src='./images/mary_driver.jpg' class='driver-img-mary-christine'>
+          <p class='driver-review-mary-christine'>
+            “My motto is very simple. It doesn't cost you a penny to be nice and kind, but it will cost you everything
+            if
+            you're not. If I'm free and somebody needs my help, I'll be the first one to jump in, in a heartbeat.”
+          </p>
+          <div class='driver-name-mary-christine'>— Mary</div>
+          <div class='driver-yoe-mary-christine'><em>Driving with Lyft since 2019</em></div>
+        </div>
+        <div class='driver-review-individual'>
+          <img src='./images/harold_driver.jpg' class='driver-img-harold'>
+          <p class='driver-review-harold'>“As a student, it’s hard to complete my class work around a schedule. I
+            started
+            driving more with Lyft and
+            realized it was the perfect opportunity to make money and work on my own time! Driving with Lyft gives me
+            freedom in my
+            schedule to focus on school, which is my main priority.”
+          </p>
+          <div class='driver-name-harold'>— Harold</div>
+          <div class='driver-yoe-harold'><em>Driving with Lyft since 2020</em></div>
+        </div>
+        <div class='driver-review-individual'>
+          <img src='./images/christine_driver.jpg' class='driver-img-mary-christine'>
+          <p class='driver-review-mary-christine'>“I'm a disabled Marine Corps veteran, and because of my disability,
+            I'm
+            no longer able to work in a
+            structured
+            environment. The few hours a week that I drive connects me to my community and gives me extra money to help
+            make ends
+            meet.”</p>
+          <div class='driver-name-mary-christine'>— Christine</div>
+          <div class='driver-yoe-mary-christine'><em>Driving with Lyft since 2016</em></div>
+        </div>
+      </div>
+      <div class='driver-review-nav'>
+        <svg class='driver-review-nav-left-arrow'>
+          <path d="M10.155 10.46h9.798v3h-9.798l2.95 3.54-2.305 1.921L5 11.96 10.8 5l2.305 1.921z"></path>
+        </svg>
+        <span class=driver-review-nav-current></span>
+        <span class=driver-review-nav-other></span>
+        <span class=driver-review-nav-other></span>
+        <span class=driver-review-nav-other></span>
+      </div>
+    </section>
   </main>
 
   <footer class='footer'>
