--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <main>
     <section class='hero-section'>
       <div style='width: 50%; padding-bottom: 115px;'>
+        <div style='height: 40px'></div>
         <h3 class='ready-when-you-are'>Ready when you are</h3>
         <div style='height: 16px'></div>
         <h1 class='hop-in'>Hop in. Crack a window. Let's get back out there.</h1>
@@ -174,24 +175,27 @@
         <div class='driver-review-individual'>
           <img src='./images/christine_driver.jpg' class='driver-img-mary-christine'>
           <p class='driver-review-mary-christine'>“I'm a disabled Marine Corps veteran, and because of my disability,
-            I'm
-            no longer able to work in a
-            structured
-            environment. The few hours a week that I drive connects me to my community and gives me extra money to help
-            make ends
-            meet.”</p>
+            I'm no longer able to work in a structured environment. The few hours a week that I drive connects me to my
+            community and gives me extra money to help make ends meet.”</p>
           <div class='driver-name-mary-christine'>— Christine</div>
           <div class='driver-yoe-mary-christine'><em>Driving with Lyft since 2016</em></div>
         </div>
       </div>
       <div class='driver-review-nav'>
-        <svg class='driver-review-nav-left-arrow'>
-          <path d="M10.155 10.46h9.798v3h-9.798l2.95 3.54-2.305 1.921L5 11.96 10.8 5l2.305 1.921z"></path>
-        </svg>
-        <span class=driver-review-nav-current></span>
-        <span class=driver-review-nav-other></span>
-        <span class=driver-review-nav-other></span>
-        <span class=driver-review-nav-other></span>
+        <div class='driver-review-nav-arrow'>
+          <svg style='width: 24px; height: 24px'>
+            <path d="M10.155 10.46h9.798v3h-9.798l2.95 3.54-2.305 1.921L5 11.96 10.8 5l2.305 1.921z"></path>
+          </svg>
+        </div>
+        <span class='driver-review-nav-current'></span>
+        <span class='driver-review-nav-other'></span>
+        <span class='driver-review-nav-other'></span>
+        <span class='driver-review-nav-other'></span>
+        <div class='driver-review-nav-arrow'>
+          <svg style='width: 24px; height: 24px'>
+            <path d="M14.797 13.46H4.999v-3h9.798l-2.95-3.54 2.305-1.921 5.8 6.961-5.8 6.96-2.305-1.921z"></path>
+          </svg>
+        </div>
       </div>
     </section>
   </main>
