--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
     </section>
 
-    <section>
+    <section class='driver-review-section'>
       <div class='driver-review-container'>
         <div class='driver-review-individual'>
           <img src='./images/mary_driver.jpg' class='driver-img-mary-christine'>
@@ -195,6 +195,62 @@
           <svg style='width: 24px; height: 24px'>
             <path d="M14.797 13.46H4.999v-3h9.798l-2.95-3.54 2.305-1.921 5.8 6.961-5.8 6.96-2.305-1.921z"></path>
           </svg>
+        </div>
+      </div>
+    </section>
+
+    <section class='ride-section1'>
+      <div style='height: 80px'></div>
+      <div class='ride-section1-container'>
+        <div class='ride-section1-part1'></div>
+        <div class='ride-section1-part2'>
+          <span class='ride-with-lyft'>ride with lyft</span>
+          <h2 class='ready-set-go'>Ready, set, go<br>in just a few quick taps.</h2>
+          <div>Whether you’re following your heart or your busy <br>schedule, we’ll get you where you need to
+            go.</div>
+          <div>
+            <div style='display: flex; flex-direction: row'>
+              <div class='get-a-reliable-ride'>
+                <svg width='16' height='16' viewbox='0 0 16 16'>
+                  <path
+                    d="M8 10v5H6V6.285c-.67 0-1.215.527-1.215 1.176V10H3.021V7.461c0-1.59 1.337-2.885 2.979-2.885h3.486c1.135 0 2.034-.575 2.498-1.114.594-.69 1.192-2.012 1.372-2.462L15 1.616c-.03.076-.758 1.89-1.662 2.94A5.014 5.014 0 0 1 11 6.059V15H9v-5H8zm2-7.5a1.501 1.501 0 1 1-3.002-.001 1.501 1.501 0 0 1 3.002 0zM1 15v-3h4v3H1z">
+                  </path>
+                </svg>
+                <button class='get-a-reliable-ride-content'>Get a reliable ride in minutes</button>
+              </div>
+            </div>
+            <div class='know-that-your-driver'>
+              <svg width='16' height='16' viewbox='0 0 16 16'>
+                <path
+                  d="M14.918 5.366c-.1-.78-.697-1.366-1.394-1.366-.698 0-1.196.585-1.495 1.073l-1.295-.195a12.966 12.966 0 0 0-5.478 0l-1.196.195C3.761 4.585 3.263 4 2.566 4c-.797 0-1.395.585-1.494 1.366-.1.878-.498 5.366 2.59 5.951 0 0 2.69.683 4.283.683.996 0 1.992-.098 2.989-.293l1.892-.488c2.59-.975 2.192-5.073 2.092-5.853zM3.164 9.95c-1.395-.975-1.096-4.097-.996-4.488 0-.195.199-.39.398-.39.299 0 .498.293.598.586V9.95zM10.934 8H4.957V6.927h5.977V8zm1.892 1.951V5.756c.1-.293.399-.683.697-.683.2 0 .399.195.399.39 0 .39.299 3.513-1.096 4.488z">
+                </path>
+              </svg>
+              <button class='know-that-your-driver-content'>Know that your driver is wearing a mask</button>
+            </div>
+            <div class='schedule-your-ride'>
+              <svg width=' 16' height='16' viewbox='0 0 16 16'>
+                <path d="M12 3h2v11H2V3h2V2h2v1h4V2h2v1zm-8.5 9.5h9V6h-9v6.5zM9 11h2V9H9v2z"></path>
+              </svg>
+              <button class='know-that-your-driver-content'>Schedule your ride in advance</button>
+            </div>
+            <div style='height: 40px'></div>
+            <div>
+              <button class='get-a-ride-button'>Get a ride</button>
+            </div>
+            <div style='height: 40px'></div>
+            <div>
+              <img src='./images/LyftPink_Gradient5.jpg' class='lyft-pink '>
+              <p class='lyft-pink-p'><u>Join Lyft Pink</u> to unlock perks like 15% off rideshare, free Grubhub+
+                membership, exclusive
+                offers, and
+                more. All for
+                $19.99 a month. Available in the US only.</p>
+            </div>
+          </div>
+        </div>
+        <div class='ride-section1-part3'></div>
+        <div class='ride-section1-part4'>
+          <img src='./images/reliable_eng.jpg'>
         </div>
       </div>
     </section>
