--- a/index.html
+++ b/index.html
@@ -241,9 +241,7 @@
             <div>
               <img src='./images/LyftPink_Gradient5.jpg' class='lyft-pink '>
               <p class='lyft-pink-p'><u>Join Lyft Pink</u> to unlock perks like 15% off rideshare, free Grubhub+
-                membership, exclusive
-                offers, and
-                more. All for
+                membership, exclusive offers, and more. All for
                 $19.99 a month. Available in the US only.</p>
             </div>
           </div>
@@ -253,6 +251,7 @@
           <img src='./images/reliable_eng.jpg'>
         </div>
       </div>
+      <div style='height: 48px'></div>
     </section>
   </main>
 
