add ride section 2
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <button class='know-that-your-driver-content'>Know that your driver is wearing a mask</button>
             </div>
             <div class='schedule-your-ride'>
-              <svg width=' 16' height='16' viewbox='0 0 16 16'>
+              <svg width='16' height='16' viewbox='0 0 16 16'>
                 <path d="M12 3h2v11H2V3h2V2h2v1h4V2h2v1zm-8.5 9.5h9V6h-9v6.5zM9 11h2V9H9v2z"></path>
               </svg>
               <button class='know-that-your-driver-content'>Schedule your ride in advance</button>
@@ -252,6 +252,92 @@
         </div>
       </div>
       <div style='height: 48px'></div>
+    </section>
+
+    <section class='ride-section2'>
+      <div class='ride-section2-container'>
+        <div class='ride-section2-part1'></div>
+        <div class='ride-section2-part2'>
+          <div>
+            <h2 class='ride-bike-scoot'>Ride. Bike. Scoot. Go bananas.</h2>
+            <p class='we-got-options'>We’ve got options to get you where you’re going. Choose a ride* that suits your
+              mood and budget.</p>
+          </div>
+          <div class='ride-options-arrows'>
+            <svg width='32' height='32' viewbox='0 0 32 32' class='ride-options-left-arrow'>
+              <path d="M11.873 13.852h14.302v4H11.873l4.41 5.291-3.073 2.561L5 15.852 13.21 6l3.073 2.561z"></path>
+            </svg>
+            <svg width='32' height='32' viewbox='0 0 32 32' class="ride-options-right-arrow">
+              <path d="M19.301 17.852H4.999v-4h14.302l-4.41-5.291L17.964 6l8.21 9.852-8.21 9.852-3.073-2.561z"></path>
+            </svg>
+          </div>
+          <div class='ride-options-container'>
+            <button class='ride-options-card'>
+              <span class='ride-options-header'>Rentals</span>
+              <img src='./images/rental_icon_2x.webp' class='ride-options-image'>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style="fill: grey">
+                  <path
+                    d="m11.169 8.27.37-.401c.74-.802.71-2.067-.092-2.838L8.794 2.533a2.031 2.031 0 0 0-2.837.092l-3.424 3.67c-.74.803-.71 2.067.092 2.838l2.653 2.468c.802.77 2.066.71 2.838-.093l.339-.339.493.463 1.296.123.216 1.295.586.556h3.423l.031-2.252-3.331-3.084zm-5.428-.68c-.494-.462-.494-1.234-.062-1.727a1.22 1.22 0 0 1 1.727-.062 1.22 1.22 0 0 1 .062 1.728c-.463.524-1.234.524-1.727.061zm7.556 4.843H11.54l-.154-.864-.154-.895-.895-.092-.894-.093-.216-.185 1.141-1.203 2.93 2.745v.587z">
+                  </path>
+                </svg>
+                <span>Seamless</span>
+              </div>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style='fill: grey'>
+                  <path
+                    d="M2.782 6.444a5.429 5.429 0 0 0 0 3.112h2.027a16.005 16.005 0 0 1 0-3.112H2.782zm.752-1.555h1.513a9.58 9.58 0 0 1 .55-1.774A5.482 5.482 0 0 0 3.534 4.89zm9.684 1.555h-2.027a16.005 16.005 0 0 1 0 3.112h2.027a5.429 5.429 0 0 0 0-3.112zm-.752-1.555a5.482 5.482 0 0 0-2.063-1.774 9.58 9.58 0 0 1 .55 1.774h1.513zM6.372 6.444A14.226 14.226 0 0 0 6.289 8c0 .555.03 1.075.083 1.556h3.257a14.766 14.766 0 0 0-.001-3.112H6.372zm.275-1.555h2.707C8.977 3.399 8.386 2.556 8 2.556c-.385 0-.976.843-1.353 2.333zM3.534 11.11a5.482 5.482 0 0 0 2.063 1.774 9.58 9.58 0 0 1-.55-1.774H3.534zm8.932 0h-1.513a9.58 9.58 0 0 1-.55 1.774 5.482 5.482 0 0 0 2.063-1.774zm-5.82 0c.378 1.49.969 2.333 1.354 2.333.386 0 .977-.843 1.354-2.333H6.647zM8 15c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7z">
+                  </path>
+                </svg>
+                <span>Independence</span>
+              </div>
+            </button>
+            <button class='ride-options-card'>
+              <span class='ride-options-header'>Bikes & Scooters</span>
+              <img src='./images/watson_scooter_icons_2x.webp' class='ride-options-image'>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style='fill: grey'>
+                  <path d="M3 9h4v6l6-8.001H9V1z">
+                  </path>
+                </svg>
+                <span>Efficient</span>
+              </div>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style='fill: grey'>
+                  <path
+                    d="M12.906 11.828C11.118 13.688 8.929 14 7.65 14c-.116 0-.231 0-.332-.008.178-.216.355-.433.524-.65.07-.088.131-.168.193-.256.254-.32.501-.657.732-.986.162-.224.324-.449.478-.673.894-1.307 1.703-2.67 2.343-4.096-1.002 1.178-2.12 2.212-3.283 3.158-.231.192-.47.377-.71.553-.307.249-.623.481-.94.697-.046.04-.1.08-.146.113-.239.168-.477.336-.716.497a.182.182 0 0 1-.07.048 9.084 9.084 0 0 1-.023-.642c0-1.7.688-3.402 1.756-4.68.137-.163.279-.33.425-.482 2.651-2.757 6.188-2.116 6.342-2.092l.586.12.108.61c.03.152.647 3.831-2.011 6.597zM6.779 5.222c-.208.217-.416.457-.632.714-.208.256-.408.529-.609.826-.038.064-.077.12-.115.184-.301-.136-.632-.393-.91-.713a6.98 6.98 0 0 1-1.04-1.58c.008.658.085 1.339.277 2.02.17.562.416 1.17.925 1.7a8.599 8.599 0 0 0-.67 2.693c-.887-.537-1.904-1.41-2.52-2.862-1.241-2.941.285-5.563.346-5.675L2.147 2l.586.112c.116.024 2.713.57 4.046 3.11z">
+                  </path>
+                </svg>
+                <span>Eco-friendly</span>
+              </div>
+            </button>
+            <button class='ride-options-card'>
+              <span class='ride-options-header'>Shared rides</span>
+              <img src='./images/shared_icon_2x.webp' class='ride-options-image'>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style='fill: grey'>
+                  <path
+                    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM6.063 5.565c0-.96 1.405-1.063 2.01-1.063.893 0 1.88.43 2.2.959l.14.232 2.102-.972-.137-.28c-.724-1.48-2.002-1.933-2.997-2.117V1H7v1.315c-2.21.009-3.453 1.538-3.453 3.25 0 2.825 2.641 3.12 4.388 3.315 1.544.183 2.292.564 2.292 1.168 0 1.19-1.693 1.282-2.213 1.282-1.169 0-2.294-.577-2.616-1.343l-.118-.28-2.28.965.12.28c.63 1.476 2.16 2.573 3.88 2.643V15h2.38v-1.475c1.762-.224 3.451-1.356 3.451-3.477 0-2.93-2.806-3.275-4.664-3.504-1.425-.17-2.104-.36-2.104-.98z">
+                  </path>
+                </svg>
+                <span>Budget-friendly</span>
+              </div>
+              <div class='ride-options-body'>
+                <svg width='16' height='16' viewbox='0 0 16 16' style='fill: grey'>
+                  <path
+                    d="M12.906 11.828C11.118 13.688 8.929 14 7.65 14c-.116 0-.231 0-.332-.008.178-.216.355-.433.524-.65.07-.088.131-.168.193-.256.254-.32.501-.657.732-.986.162-.224.324-.449.478-.673.894-1.307 1.703-2.67 2.343-4.096-1.002 1.178-2.12 2.212-3.283 3.158-.231.192-.47.377-.71.553-.307.249-.623.481-.94.697-.046.04-.1.08-.146.113-.239.168-.477.336-.716.497a.182.182 0 0 1-.07.048 9.084 9.084 0 0 1-.023-.642c0-1.7.688-3.402 1.756-4.68.137-.163.279-.33.425-.482 2.651-2.757 6.188-2.116 6.342-2.092l.586.12.108.61c.03.152.647 3.831-2.011 6.597zM6.779 5.222c-.208.217-.416.457-.632.714-.208.256-.408.529-.609.826-.038.064-.077.12-.115.184-.301-.136-.632-.393-.91-.713a6.98 6.98 0 0 1-1.04-1.58c.008.658.085 1.339.277 2.02.17.562.416 1.17.925 1.7a8.599 8.599 0 0 0-.67 2.693c-.887-.537-1.904-1.41-2.52-2.862-1.241-2.941.285-5.563.346-5.675L2.147 2l.586.112c.116.024 2.713.57 4.046 3.11z">
+                  </path>
+                </svg>
+                <span>Eco-friendly</span>
+              </div>
+            </button>
+          </div>
+          <p class='availability-of-bikes'>*Availability of bikes, scooters, rentals, ride types, and transit
+            information varies by region.</p>
+        </div>
+        <div></div>
+        <div></div>
+      </div>
     </section>
   </main>
 
