add ride section 3
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -335,8 +335,34 @@
           <p class='availability-of-bikes'>*Availability of bikes, scooters, rentals, ride types, and transit
             information varies by region.</p>
         </div>
-        <div></div>
-        <div></div>
+      </div>
+    </section>
+
+    <section class='ride-section3'>
+      <div class='ride-section3-container'>
+
+        <h2 class='ready-to-roll'>Ready to roll?<br>Get a Lyft estimate.</h2>
+
+        <div class='ride-section3-searchbox-container '>
+          <div class='ride-section3-searchbox'>
+            <svg width='16' height='16' class='search-dot' viewbox='0 0 16 16'>
+              <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
+            </svg>
+            <input type='text' placeholder="Enter pick-up location*">
+          </div>
+        </div>
+
+        <div class='ride-section3-searchbox-container '>
+          <div class='ride-section3-searchbox'>
+            <svg width='16' height='16' class='search-dot' style='fill:#DE00A6' viewbox='0 0 16 16'>
+              <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
+              </path>
+            </svg>
+            <input type='text' placeholder="Enter drop-off location*">
+          </div>
+        </div>
+
+        <button class='ride-section3-get-estimate'>Get estimate</button>
       </div>
     </section>
   </main>
@@ -344,7 +370,7 @@
   <footer class='footer'>
     <div class='sitemap page-section'>
       <ul class='list-style'>
-        <li style='font-weight: 700'>Driver</li>
+        <li style='font-weight: 700'>DRIVER</li>
         <li>Become a Driver</li>
         <li>Earnings</li>
         <li>Cities</li>
@@ -359,7 +385,7 @@
         <li>Hub</li>
       </ul>
       <ul class='list-style'>
-        <li style='font-weight: 700'>Rider</li>
+        <li style='font-weight: 700'>RIDER</li>
         <li>Sign up to ride</li>
         <li>Fare Estimate</li>
         <li>Lyft Pink</li>
@@ -375,7 +401,7 @@
         <li>Blog</li>
       </ul>
       <ul class='list-style'>
-        <li style='font-weight: 700'>Lyft</li>
+        <li style='font-weight: 700'>LYFT</li>
         <li>Careers</li>
         <li>LyftUp</li>
         <li>Business</li>
@@ -396,8 +422,8 @@
     </div>
     <div class='footnote page-section'>
       <ul class='list-style'>
-        <li><a href="https://www.lyft.com/terms">Terms</a></li>
-        <li><a href="https://www.lyft.com/privacy">Privacy</a></li>
+        <li style='text-decoration: underline'><a href="https://www.lyft.com/terms">Terms</a></li>
+        <li style='text-decoration: underline'><a href="https://www.lyft.com/privacy">Privacy</a></li>
         <li>&copy; 2021 Lyft, Inc.</li>
         <li>CPUC ID No. TCP0032513-P</li>
         <li class='navlinks-footer'><a href="https://www.twitter.com/lyft" class='fa fa-twitter'></a></li>
