add safety first section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
 
     <section class='ride-section3'>
       <div class='ride-section3-container'>
-
         <h2 class='ready-to-roll'>Ready to roll?<br>Get a Lyft estimate.</h2>
-
         <div class='ride-section3-searchbox-container '>
           <div class='ride-section3-searchbox'>
             <svg width='16' height='16' class='search-dot' viewbox='0 0 16 16'>
@@ -351,7 +349,6 @@
             <input type='text' placeholder="Enter pick-up location*">
           </div>
         </div>
-
         <div class='ride-section3-searchbox-container '>
           <div class='ride-section3-searchbox'>
             <svg width='16' height='16' class='search-dot' style='fill:#DE00A6' viewbox='0 0 16 16'>
@@ -361,8 +358,28 @@
             <input type='text' placeholder="Enter drop-off location*">
           </div>
         </div>
-
         <button class='ride-section3-get-estimate'>Get estimate</button>
+      </div>
+    </section>
+
+    <section class='safety-first-container'>
+      <div class='safety-first-section1'></div>
+      <div class='safety-first-section2'>
+        <span class='safety-first-header'>SAFETY FIRST</span>
+        <h2 class='how-to-show'>How to show up like a best stranger</h2>
+        <p>Every ride should feel safe and comfy to everyone. A few simple ground rules can help make that happen
+          for all drivers and riders. Read up, mask up, and crack a window to enjoy the breeze in your hair.</p>
+        <div class='buttons-container'>
+          <button class='learn-about-safety'>Learn about safety</button>
+          <button class='community-guidlines'>Community guidlines</button>
+          <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
+            <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+          </svg>
+        </div>
+      </div>
+      <div class=safety-first-section3></div>
+      <div class=safety-first-section4>
+        <img src='./images/Image_for_Homepage_Safety_Module.webp'>
       </div>
     </section>
   </main>
