add transition to the search box in ride section 3
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -346,7 +346,10 @@
             <svg width='16' height='16' class='search-dot' viewbox='0 0 16 16'>
               <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
             </svg>
-            <input type='text' placeholder="Enter pick-up location*">
+            <input type='text' placeholder="" required='required' class='input-style'>
+            <label class='location-label'>
+              <span>Enter pick-up location*</span>
+            </label>
           </div>
         </div>
         <div class='ride-section3-searchbox-container '>
@@ -355,7 +358,10 @@
               <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
               </path>
             </svg>
-            <input type='text' placeholder="Enter drop-off location*">
+            <input type='text' placeholder="" required="required" class='input-style'>
+            <label class='location-label'>
+              <span>Enter drop-off location*</span>
+            </label>
           </div>
         </div>
         <button class='ride-section3-get-estimate'>Get estimate</button>
