add vaccine access section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <h2 class='ready-to-roll'>Ready to roll?<br>Get a Lyft estimate.</h2>
         <div class='ride-section3-searchbox-container '>
           <div class='ride-section3-searchbox'>
-            <svg width='16' height='16' class='search-dot' viewbox='0 0 16 16'>
+            <svg width='16' height='16' class='search-dot-2' viewbox='0 0 16 16'>
               <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
             </svg>
             <input type='text' placeholder="" required='required' class='input-style'>
@@ -354,7 +354,7 @@
         </div>
         <div class='ride-section3-searchbox-container '>
           <div class='ride-section3-searchbox'>
-            <svg width='16' height='16' class='search-dot' style='fill:#DE00A6' viewbox='0 0 16 16'>
+            <svg width='16' height='16' class='search-dot-2' style='fill:#DE00A6' viewbox='0 0 16 16'>
               <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
               </path>
             </svg>
@@ -386,6 +386,30 @@
       <div class=safety-first-section3></div>
       <div class=safety-first-section4>
         <img src='./images/Image_for_Homepage_Safety_Module.webp'>
+      </div>
+    </section>
+
+    <section class='vaccine-access-container'>
+      <div class='vaccine-access-section1'></div>
+      <div class='vaccine-access-section2'>
+        <img src='./images/Driver_Vaccine_Access.webp' class='vaccine-access-img'>
+      </div>
+      <div class='vaccine-access-section3'></div>
+      <div class='vaccine-access-section4'>
+        <span class='vaccine-access-header'>VACCINE ACCESS</span>
+        <h2 class='getting-the-vaccine'>Getting the vaccine<br>starts with getting to the<br>vaccine</h2>
+        <p>The pandemic has been tough on all of us, but it’s been particularly hard on communities that are underserved
+          by public transit, healthcare, and other basic services. It’s our duty to help the best way we can: with
+          rides. We’re
+          working with partners and community members to help provide access to transportation to vaccine sites for
+          people who need
+          it. So everyone can say, “Sorry, COVID, our ride’s here.”</p>
+        <div class='learn-more-about-container'>
+          <button class='learn-more-about-vaccine-access'>Learn more about vaccine access</button>
+          <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
+            <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+          </svg>
+        </div>
       </div>
     </section>
   </main>
