update <button> to <a> in safety first & vaccine access sections
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
           for all drivers and riders. Read up, mask up, and crack a window to enjoy the breeze in your hair.</p>
         <div class='buttons-container'>
           <button class='learn-about-safety'>Learn about safety</button>
-          <button class='community-guidlines'>Community guidlines</button>
-          <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
-            <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
-          </svg>
+          <a href='https://www.lyft.com/safety/community-guidelines' class='community-guidlines'>Community guidlines
+            <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
+              <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+            </svg></a>
         </div>
       </div>
       <div class=safety-first-section3></div>
@@ -404,12 +404,12 @@
           working with partners and community members to help provide access to transportation to vaccine sites for
           people who need
           it. So everyone can say, “Sorry, COVID, our ride’s here.”</p>
-        <div class='learn-more-about-container'>
-          <button class='learn-more-about-vaccine-access'>Learn more about vaccine access</button>
+        <a href='https://www.lyft.com/vaccine-access' class='learn-more-about-vaccine-access'>
+          Learn more about vaccine access
           <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
             <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
           </svg>
-        </div>
+        </a>
       </div>
     </section>
   </main>
