make search box in nav bar responsive
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
         </svg>
       </a>
       <div class="searchbox">
-        <svg width='16' height='16' class='search-dot' style='fill:#DE00A6' viewbox='0 0 16 16'>
+        <svg width='16' height='16' style='fill:#DE00A6' viewbox='0 0 16 16'>
           <path d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
         </svg>
-        <input type='text' name="wheretogo" placeholder="Where are you going?">
-        <svg width='16' height='16' class='searchicon' fill='rgba(12, 11, 49, 1)' viewbox='0 0 16 16'>
+        <input type='text' required='required' placeholder='' class='nav-input-style'>
+        <label class='nav-location-label'>
+          <span>Where are you going?</span>
+        </label>
+        <svg width='16' height='16' fill='rgba(12, 11, 49, 1)' viewbox='0 0 16 16'>
           <path
             d="M7.298 10.313a3.172 3.172 0 0 1-2.776-3.514 3.145 3.145 0 0 1 1.182-2.116 3.14 3.14 0 0 1 2.332-.66 3.17 3.17 0 0 1 2.777 3.515A3.15 3.15 0 0 1 9.63 9.653a3.151 3.151 0 0 1-2.332.66zm5.98 2.433-1.733-2.192A5.122 5.122 0 0 0 12.8 7.771V7.77a5.173 5.173 0 0 0-4.53-5.733 5.111 5.111 0 0 0-3.806 1.077 5.131 5.131 0 0 0-1.929 3.452 5.174 5.174 0 0 0 5.137 5.768 5.1 5.1 0 0 0 2.287-.56l1.747 2.212 1.571-1.24z">
           </path>
