update driver pay <button> to <a> in driver section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -136,15 +136,13 @@
             </div>
             <div style='display: flex; flex-direction: row; margin-top: 40px'>
               <a href='https://www.lyft.com/drive-with-lyft' class='apply-to-drive'>Apply to drive</a>
-              <div style='display: inline-flex; align-items: center;'>
-                <a href='https://www.lyft.com/driver/pay?pid=earnings'>
-                  <strong style='font-size: 14px; line-height: 18px; margin-right: 8px; margin-left: 24px'>How driver
-                    pay works</strong>
-                </a>
-                <svg style='width: 16px; height: 16px'>
-                  <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+              <a href='https://www.lyft.com/driver/pay?pid=earnings' class='driver-pay-container'>
+                <strong style='padding-right: 8px'>How driver pay works</strong>
+                <svg width='16' height='16' viewbox='0 0 16 16'>
+                  <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z">
+                  </path>
                 </svg>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -243,9 +241,12 @@
             <div style='height: 40px'></div>
             <div>
               <img src='./images/LyftPink_Gradient5.jpg' class='lyft-pink '>
-              <p class='lyft-pink-p'><u>Join Lyft Pink</u> to unlock perks like 15% off rideshare, free Grubhub+
+              <p class='lyft-pink-p'>
+                <a href='https://www.lyft.com/memberships/lyft-pink/offer-details?offer_id=lyft-pink'>
+                  <u>Join Lyft Pink</u></a> to unlock perks like 15% off rideshare, free Grubhub+
                 membership, exclusive offers, and more. All for
-                $19.99 a month. Available in the US only.</p>
+                $19.99 a month. Available in the US only.
+              </p>
             </div>
           </div>
         </div>
