--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
               <button class='know-that-your-driver-content'>Schedule your ride in advance</button>
             </div>
             <div style='height: 40px'></div>
-            <div>
-              <button class='get-a-ride-button'>Get a ride</button>
+            <div class='get-a-ride-button'>
+              <a href='https://ride.lyft.com/'>Get a ride</a>
             </div>
             <div style='height: 40px'></div>
             <div>
@@ -380,7 +380,9 @@
         <p>Every ride should feel safe and comfy to everyone. A few simple ground rules can help make that happen
           for all drivers and riders. Read up, mask up, and crack a window to enjoy the breeze in your hair.</p>
         <div class='buttons-container'>
-          <button class='learn-about-safety'>Learn about safety</button>
+          <div class='learn-about-safety'>
+            <a href='https://www.lyft.com/safety'>Learn about safety</a>
+          </div>
           <a href='https://www.lyft.com/safety/community-guidelines' class='community-guidlines'>Community guidlines
             <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
               <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
