add lyft business section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -418,6 +418,34 @@
         </a>
       </div>
     </section>
+
+    <section class='lyft-business-container'>
+      <img src='./images/Lyft_Business_Pink.webp' class='lyft-business-logo'>
+      <h3 class='we-help-you'>We help you move your</h3>
+      <div>
+        <span>employees</span>
+        <span>VIPs</span>
+        <span>customers</span>
+        <span>ideas</span>
+        <span>interviewees</span>
+        <span>visitors</span>
+        <span>students</span>
+        <span>patients</span>
+        <span>guests</span>
+        <span>essential goods</span>
+        <span>prospects</span>
+        <span>supplies</span>
+        <span>people</span>
+        <span>business</span>
+      </div>
+      <p>Affordable transportation solutions, effortless payments, and getting all the right people to all the right
+        places. So you can get work done.</p>
+      <a href='https://www.lyft.com/business' class='learn-about-lyft-business'>Learn about Lyft Business
+        <svg width='16' height='16' viewbox='0 0 16 16' style='margin-left: 8px'>
+          <path d="M10.173 9.422H1V6.613h9.173L7.411 3.298 9.569 1.5 15 8.017l-5.431 6.517-2.158-1.798z"></path>
+        </svg>
+      </a>
+    </section>
   </main>
 
   <footer class='footer'>
