--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
 
     <section class='ride-section3'>
       <div class='ride-section3-container'>
+        <div style='margin-left: 7.333%'></div>
         <h2 class='ready-to-roll'>Ready to roll?<br>Get a Lyft estimate.</h2>
         <div class='ride-section3-searchbox-container '>
           <div class='ride-section3-searchbox'>
