modify footer section
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
 
   <footer class='footer'>
     <div class='sitemap page-section'>
-      <ul class='list-style'>
-        <li style='font-weight: 700'>DRIVER</li>
+      <ul class='sitemap-li'>
+        <li style='font-size: 16px; font-weight: 700; line-height: 20px; padding-bottom: 20px'>DRIVER</li>
         <li>Become a Driver</li>
         <li>Earnings</li>
         <li>Cities</li>
@@ -466,8 +466,8 @@
         <li>Insurance</li>
         <li>Hub</li>
       </ul>
-      <ul class='list-style'>
-        <li style='font-weight: 700'>RIDER</li>
+      <ul class='sitemap-li'>
+        <li style='font-size: 16px; font-weight: 700; line-height: 20px; padding-bottom: 20px'>RIDER</li>
         <li>Sign up to ride</li>
         <li>Fare Estimate</li>
         <li>Lyft Pink</li>
@@ -482,8 +482,8 @@
         <li>Donate</li>
         <li>Blog</li>
       </ul>
-      <ul class='list-style'>
-        <li style='font-weight: 700'>LYFT</li>
+      <ul class='sitemap-li'>
+        <li style='font-size: 16px; font-weight: 700; line-height: 20px; padding-bottom: 20px'>LYFT</li>
         <li>Careers</li>
         <li>LyftUp</li>
         <li>Business</li>
