re-style ride section 2
Signed-off-by: Ella N <38847123+ellanan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -268,12 +268,16 @@
               mood and budget.</p>
           </div>
           <div class='ride-options-arrows'>
-            <svg width='32' height='32' viewbox='0 0 32 32' class='ride-options-left-arrow'>
-              <path d="M11.873 13.852h14.302v4H11.873l4.41 5.291-3.073 2.561L5 15.852 13.21 6l3.073 2.561z"></path>
-            </svg>
-            <svg width='32' height='32' viewbox='0 0 32 32' class="ride-options-right-arrow">
-              <path d="M19.301 17.852H4.999v-4h14.302l-4.41-5.291L17.964 6l8.21 9.852-8.21 9.852-3.073-2.561z"></path>
-            </svg>
+            <div class='ride-options-left-arrow'>
+              <svg width='32' height='32' viewbox='0 0 32 32'>
+                <path d="M11.873 13.852h14.302v4H11.873l4.41 5.291-3.073 2.561L5 15.852 13.21 6l3.073 2.561z"></path>
+              </svg>
+            </div>
+            <div class="ride-options-right-arrow">
+              <svg width='32' height='32' viewbox='0 0 32 32'>
+                <path d="M19.301 17.852H4.999v-4h14.302l-4.41-5.291L17.964 6l8.21 9.852-8.21 9.852-3.073-2.561z"></path>
+              </svg>
+            </div>
           </div>
           <div class='ride-options-container'>
             <button class='ride-options-card'>
